--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Website Guilherme Cabral</title>
+    <title>Brigaderia Encantada</title>
+     <link rel="shortcut icon" href="ico/logo.ico" type="image/x-icon">
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
