Feat: footer brigaderia encantada

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <li><a href="#" target="_blank">Em breve...</a></li>
       </ul>
       <footer>
-        © Copyright 2023 - Instagram | Desenvolvimento <a href="https://github.com/Guilh3rmeCabral">Cabral Dev</a>
+        © Copyright 2023 - Brigaderia Encantada | Desenvolvimento <a href="https://github.com/Guilh3rmeCabral">Cabral Dev</a>
       </footer>
     </div>
     <script
