--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </div>
       <ul>
         <li><a href="https://wa.me/message/MQXBDN7ZZSLZE1" target="_blank">🍩Whatsapp🍩</a></li>
-        <li><a href="https://instagram.com/brig.adeiriaencantada?igshid=MzNlNGNkZWQ4Mg==" target="_blank">🍩Instagram🍩</a></li>
+        <li><a href="https://instagram.com/brigaderiaencantada_?igshid=MzNlNGNkZWQ4Mg== " target="_blank">🍩Instagram🍩</a></li>
         <li><a href="#">Em breve...</a></li>
         <li><a href="#" target="_blank">Em breve...</a></li>
       </ul>
